file/files/swim.css
:root {
    --ctrl-ft-clr: #000;
    --ctrl-bk-clr: #7DF;
    --selected-clr: #79F;
    --hover-clr: #57E;

    --im-clr-factor: 10%;
    --bbf-clr-factor: 8%;
    --fr-clr-factor: 4%;
}

* {
    box-sizing: border-box;
}

body,
input,
select,
textarea {
    color: var(--f0-clr);
    stroke: var(--f0-clr);
    background-color: var(--b0-clr);
}

body,
input,
select {
    font: 14px Verdana;
}

.select-text,
input[type="date"],
input[type="text"],
select {
    padding: 7px 10px;
    border-radius: 5px;
    border: 1px solid var(--f0-clr);
}

h1,
h2,
h3,
.center {
    text-align: center;
}

th {
    padding: 10px 5px;
    background-color: var(--b1-clr);
}

td {
    white-space: nowrap;
    text-align: right;
    padding: 10px 7px;
}

td.tc {
    padding: 5px 7px;
}

tr>* {
    border: 1px solid var(--f0-clr);
}

.dropdown .group>div {
    background-color: var(--b0-clr);
}

button {
    border: 0;
    padding: 10px;
    font: 14px Verdana;
    border-radius: 5px;
    color: var(--ctrl-ft-clr);
    stroke: var(--ctrl-ft-clr);
    background-color: var(--ctrl-bk-clr);
}

button.disabled {
    cursor: default !important;
    background-color: var(--b2-clr) !important;
    color: var(--f2-clr) !important;
    stroke: var(--f2-clr) !important;
}

a {
    color: var(--hover-clr);
}

td .dp {
    color: var(--time-drop-clr);
}

td .ad {
    color: var(--time-add-clor);
}

.st,
.dd,
.ds {
    color: var(--f1-clr);
}

tr:nth-child(2n+1) {
    background-color: var(--row-2n-bk-clr);
}

#input {
    border-radius: 5px;
    padding: 9px;
    width: 100%;
    max-width: 300px;
}

#content {
    margin: 10px;
}

.hide {
    display: none !important;
}

.top-margin {
    margin: 10px 0 0 0;
}

.header {
    margin: 16px 0;
    font-size: 16px;
    white-space: nowrap;
}

.left,
.left * {
    text-align: left;
}

.container {
    display: inline-block;
}

.match-size {
    display: flex;
}

.match-size>div {
    flex-grow: 1;
    width: 0;
}

.match-size span {
    display: inline-block;
    padding: 5px 10px;
    text-wrap: nowrap;
}

.match-size button {
    padding: 3px 5px;
    margin: 5px 4px;
    border: 1px solid;
    width: 45px;
}

/* tr.d25 {
    background-color: inherit;
} */

.age,
.hd {
    text-align: center;
}

.age {
    background-color: var(--b1-clr);
}

.age,
.bold {
    /* font-weight: bold; */
    font-weight: 700;
}

.st,
.dd,
.ds {
    user-select: none;
    font-size: x-small;
    margin: 0 0 -4px 0;
}

.st {
    float: left;
    margin-right: 30px;
}

table.imx .st {
    margin-right: 55px;
}

table.agebest .st {
    margin-right: 50px;
}

.dd {
    position: absolute;
    right: 3px;
}

.ds {
    float: right;
}

td>.r {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    z-index: -1;
    background-color: var(--mask-clr);
}

td {
    position: relative;
}

.gn>td,
.select-text.gn {
    background-color: color-mix(in srgb, var(--br-clr) 10%, var(--b0-clr));
}

.bl>td,
.select-text.bl {
    background-color: color-mix(in srgb, var(--bk-clr) 10%, var(--b0-clr));
}

.rd>td,
.select-text.rd {
    background-color: color-mix(in srgb, var(--fr-clr) 10%, var(--b0-clr));
}

.loader {
    border: 5px solid var(--b3-clr);
    border-top: 5px solid var(--ctrl-bk-clr);
    border-radius: 50%;
    width: 16px;
    height: 16px;
    animation: spin 2s linear infinite;
    float: right;
}

.mback {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--dark-mask-clr);
}

.mloader {
    font-size: 48px;
    display: inline-block;
    font-family: Arial, Helvetica, sans-serif;
    /* font-weight: bold; */
    font-weight: 700;
    color: var(--selected-clr);
    /* box-sizing: border-box; */
    text-shadow: 0 0 2px var(--selected-clr);
    letter-spacing: 2px;
    position: relative;
}

.mloader::after {
    content: "Loading";
    position: absolute;
    left: 0;
    top: 0;
    color: var(--b0-clr);
    width: 100%;
    height: 100%;
    overflow: hidden;
    /* box-sizing: border-box; */
    animation: animloader 6s linear infinite;
}

@keyframes animloader {
    0% {
        width: 0%;
    }

    to {
        width: 100%;
    }
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(360deg);
    }
}

/* popup */
.bs {
    position: relative;
    cursor: pointer;
}

.bs .pop {
    visibility: hidden;
    padding: 5px;
    border-radius: 8px;
    white-space: nowrap;
    cursor: default;

    /* Position the tooltip */
    position: absolute;
    z-index: 1;
    top: -30px;
    transition-property: visibility;
    transition-delay: 0s;

    background-color: var(--b1-clr);
    border: 1px solid var(--f0-clr);
    color: var(--hover-clr);
}

.bs:hover .pop {
    visibility: visible;
    transition-delay: .3s;
}

.full>.bs {
    justify-content: center;
    padding: 10px 5px
}

.full>.bs,
.full>.clickable {
    display: flex;
    height: 100%;
    align-items: center;
}

.dp>.bs::before,
.ad>.bs::before {
    content: attr(data-pop);
    font-size: 10px;
    position: relative;
    top: -6px;
    padding: 0 4px;
}

/* clibable table cell */
.full>.clickable {
    justify-content: end;
    padding: 0 5px;
    min-height: 30px;
    text-decoration: underline;
}

.full.left>.clickable {
    justify-content: start;
}

canvas {
    display: block;
}

.cross {
    cursor: crosshair;
}

canvas.width {
    cursor: e-resize;
}

canvas.height {
    cursor: n-resize;
}

/* tab view */
/* .tabview {
    margin: 0;
    width: 100%;
} */

.tabs {
    user-select: none;
    background-color: var(--b1-clr);
    border-bottom: 1px solid var(--f0-clr);
}

.tab {
    display: inline-block;
    padding: 0;
    border-radius: 5px 5px 0 0;
    background-color: var(--b2-clr);
    border: 1px solid var(--b3-clr);
}
/* ... */

